WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66453
REGRESSION(
r90971
): Null pointer dereference with placeholder and webkit-scrollbar-corner
https://bugs.webkit.org/show_bug.cgi?id=66453
Summary
REGRESSION(r90971): Null pointer dereference with placeholder and webkit-scro...
Kent Tamura
Reported
2011-08-17 22:54:11 PDT
http://code.google.com/p/chromium/issues/detail?id=90726
Repro: <style> ::-webkit-scrollbar-corner { color: Red; } </style> <input placeholder="foo"> <p>Focus on the input and hit Escape</p> <script> document.querySelector("input").addEventListener("keydown", function() { this.style.display = "none"; }); </script>
Attachments
Patch
(4.03 KB, patch)
2011-08-18 00:12 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-08-18 00:12:51 PDT
Created
attachment 104308
[details]
Patch
Kent Tamura
Comment 2
2011-08-18 00:39:06 PDT
(In reply to
comment #1
)
> Created an attachment (id=104308) [details] > Patch
I thought this bug can be reproducible without placeholder, but I couldn't make a repro. I don't know if a RenderBlock with position:relative and visibility:hidden without an enclosing layer is a correct status.
Dimitri Glazkov (Google)
Comment 3
2011-08-18 07:03:42 PDT
Looks reasonable to me. Dave, Simon?
WebKit Review Bot
Comment 4
2011-08-18 18:33:21 PDT
Comment on
attachment 104308
[details]
Patch Clearing flags on attachment: 104308 Committed
r93382
: <
http://trac.webkit.org/changeset/93382
>
WebKit Review Bot
Comment 5
2011-08-18 18:33:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug