REGRESSION(r90971): Null pointer dereference with placeholder and webkit-scrollbar-corner https://bugs.webkit.org/show_bug.cgi?id=66453

Reviewed by Simon Fraser.

Source/WebCore:

Test: fast/forms/placeholder-crash-with-scrollbar-corner.html

* rendering/RenderObjectChildList.cpp:
(WebCore::RenderObjectChildList::removeChildNode): Add a NULL check for owner's layer.

LayoutTests:

* fast/forms/placeholder-crash-with-scrollbar-corner-expected.txt: Added.
* fast/forms/placeholder-crash-with-scrollbar-corner.html: Added.


Canonical link: https://commits.webkit.org/82372@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93382 268f45cc-cd09-0410-ab3c-d52691b4dbfc